components/apps/keycloak/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak
  namespace: keycloak
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`keycloak.redcomet.ca`)
    services:
    - kind: Service
      name: keycloak-headless
      port: 8080
